# sharpenCommander

./: .gitignore  AGENTS.md  README.md  bash-script.sh  dc.py  dlgAck.py  dlgFind.py  fish-script.sh  globalBase.py  gr.py  groupRepo.py  install.sh  mainGitStatus.py  mainGoto.py  mainRegList.py  myutil.py  requirements.txt  sc.py  setup.py  tool.py  urwidHelper.py
ai/: app-ctrl-test.md  app-test.md  app-ui-spec.md  app-ui-test.md  test.md
rust/: Cargo.toml  bash-init.sh  build.sh  r
rust/.ai/: app-ctrl-test.md  app-ui-spec.md  guide.md  spec.md  test.md
rust/src/: app.rs  config.rs  git.rs  lib.rs  main.rs  system.rs  util.rs
rust/src/ui/: common.rs  find_ctrl.rs  find_ui.rs  git_commit_ctrl.rs  git_commit_ui.rs  git_history_ctrl.rs  git_history_ui.rs  git_push_ui.rs  git_stage_ctrl.rs  git_stage_ui.rs  git_status_ctrl.rs  git_status_ui.rs  goto_ctrl.rs  goto_ui.rs  grep_ctrl.rs  grep_ui.rs  main_ctrl.rs  main_ui.rs  mod.rs  reg_list_ctrl.rs  reg_list_ui.rs
rust/tests/: integration_test.rs
sharpenCommander/: ansiTerm.py  mainGit.py  mainGoto.py  mainRegList.py  myutil.py  run.py  sc.py  script-bash.sh  script-fish.sh  tool.py  urwidHelper.py
