[package]
name = "sc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.26"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
gix = "0.69"
gix-diff = "0.49"
syntect = "5.3"

[dev-dependencies]
ratatui = "0.26"
